Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/6be1308604d325f25db623d0713ba6fb5a4b517d

--- a/_data/people/1_people_aleph.yml
+++ b/_data/people/1_people_aleph.yml
@@ -191,6 +191,14 @@
   name: Pietro
   surname: De Matteis
 
+- id: RiccardoGennaro_BA
+  name: Riccardo
+  surname: Gennaro
+
+- id: RiccardoGermenia
+  name: Riccardo
+  surname: Germenia
+
 - id: RiccardoLongo
   name: Riccardo
   surname: Longo
@@ -201,10 +209,6 @@
       place: Trento, Italy
   email: rlongo@fbk.eu
   orcid: 0000-0002-8739-3091
-
-- id: RiccardoGermenia
-  name: Riccardo
-  surname: Germenia
 
 - id: RobertoCarbone
   name: Roberto
