Update from https://github.com/aleph-fbk/aleph-fbk.github.io/commit/26735a8b4b4c7fe6d59c67894f0837ab9ecee158

--- a/_data/people/1_people_aleph.yml
+++ b/_data/people/1_people_aleph.yml
@@ -55,6 +55,10 @@
       place: Trento, Italy
   email: cspadafora@fbk.eu
 
+- id: ClaudioForoncelli
+  name: Claudio
+  surname: Foroncelli
+  
 - id: DavidIoanHangu_BA
   name: David Ioan
   surname: Hangu
@@ -124,6 +128,11 @@
 - id: IreneVilla
   name: Irene
   surname: Villa
+  
+- id: LauraCristiano
+  name: Laura
+  surname: Cristiano
+  email: l.cristiano@fbk.eu
   
 - id: LucaClaus_BA
   name: Luca
