--- a/_data/internships.yml
+++ b/_data/internships.yml
@@ -1881,3 +1881,31 @@ projects:
         links:
           - name: Link
             url: https://linddun.org/
+
+  - id: p-2025-st-4
+    title: Context-free grammar for TLS validation
+    published: "2025-03-12"
+    applicationEnd: "2025-03-26 23:59"
+    year: 2025
+    description: >
+      Since its first version was published as an RFC in 1999, Transport Layer Security (TLS) has rapidly become the de facto standard for providing confidentiality and integrity to communications exchanged in an unsecured environment. While there exist multiple implementations (e.g., OpenSSL, GnuTLS, rusttls) that allow system administrators to easily deploy a webserver, there does not exist a practical way to verify their compliance with the RFCs they are based on.
+      The primary objective of this internship is to write a context-free grammar able to parse TLS messages and check if they comply with the expected structure.
+    type: IT
+    level:
+      - BSc
+      - MSc
+    unit:
+      - ST
+    supervisor:
+      - SalvatoreManfredi
+      - RiccardoGermenia
+    prerequisites:
+      - Experience with formal grammars (e.g. LFC course)
+      - Basic knowledge of the TLS protocol (e.g. Intro2CNS or Networking course)
+    objectives: Creation of a CFG (context-free grammar) for TLS 1.3
+    topics:
+      - Research tool
+      - Context-free grammar
+      - Packet analysis
+      - TLS vulnerabilities
+    notes: The project's scope will be adjusted to accommodate the number of available credits, making it suitable for both bachelor and master students. However, due to the need for future-proof and reusable results, access to the thesis period is dependent on an assessment performed on (and during) the internship period.
