--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,9 +9,9 @@ name: Deploy Jekyll site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["main"]
+    branches: ["feature/join-data-files"]
   pull_request:
-    branches: ["main"]
+    branches: ["feature/join-data-files"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -41,6 +41,21 @@ jobs:
           ruby-version: '3.1.3' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
+      - name: Merge YAML lists from _data/single/*/*.yml into _data/*.yml
+        run: |
+          mkdir -p _data
+          for dir in _data/single/*/ ; do
+            foldername=$(basename "$dir")
+            output="_data/${foldername}.yml"
+            echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
+            for file in "$dir"*.yml; do
+              filename=$(basename "$file")
+              echo "" >> "$output"
+              echo "## From file: $filename" >> "$output"
+              cat "$file" >> "$output"
+            done
+            echo "" >> "$output"
+          done
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
