--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,10 +47,12 @@ jobs:
           for dir in _data/single/*/ ; do
             foldername=$(basename "$dir")
             output="_data/${foldername}.yml"
+            echo "# Auto-merged from _data/single/${foldername}/*.yml"
             echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
             for file in "$dir"*.yml; do
               filename=$(basename "$file")
               echo "" >> "$output"
+              echo "## From file: $filename"
               echo "## From file: $filename" >> "$output"
               cat "$file" >> "$output"
             done
