--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -47,19 +47,26 @@ jobs:
           for dir in _data/single/*/ ; do
             foldername=$(basename "$dir")
             output="_data/${foldername}.yml"
-            echo "# In file ${output}"
-            echo "# Auto-merged from _data/single/${foldername}/*.yml"
+            echo "FILE ${output}"
+            echo "Auto-merged from _data/single/${foldername}/*.yml"
             echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
             for file in "$dir"*.yml; do
               filename=$(basename "$file")
               echo "" >> "$output"
-              echo "## From file: $filename"
+              echo "From file: $filename"
               echo "## From file: $filename" >> "$output"
               cat "$file" >> "$output"
             done
             echo "" >> "$output"
           done
-      
+      - name: Setup Pages
+        id: pages
+        uses: actions/configure-pages@v3
+      - name: Build with Jekyll
+        # Outputs to the './_site' directory by default
+        run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
+        env:
+          JEKYLL_ENV: production
       - name: Upload artifact
         # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
