--- a/_config.yml
+++ b/_config.yml
@@ -1,36 +1,159 @@
+# Site Settings
 title: Center for Cybersecurity
 tagline: Research Center in Fondazione Bruno Kessler (FBK)
-logo: /assets/images/logos/CS.png
-remote_theme: chrisrhymes/bulma-clean-theme@v0.13.3
-markdown: kramdown
+#remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
+remote_theme: marcopernpruner/template-test
 repository: csfbk/csfbk.github.io
+baseurl: ""
+
+# Entity Settings
+entity_type: "center"
+
+organization:
+  center:
+    name: "Center for Cybersecurity"
+    acronym: "CS"
+
+content-manager:
+  name: Silvio Ranise
+  affiliation: Center for Cybersecurity
+  email: ranise@fbk.eu
+  phone: 03900223920809
+
+social:
+  github: https://www.facebook.com/
+  youtube: https://www.facebook.com/
+
+# Other Settings and Defaults
+livereload: true
+#google_analytics: UA-code-here
+
+## DO NOT MODIFY
+lang: en
+permalink: pretty
+markdown: kramdown
+highlighter: rouge
+show_navbar_brand: false
+show_link_fbk: true
+sass:
+  style: compressed
+  source_dir: _sass
 
 plugins:
   - jekyll-redirect-from
 
 collections:
-  internships:
+  collaborations:
+    output: true
+    layout: collaboration
+  complementary:
+    output: true
+    layout: complementary
+  events:
     output: true
     layout: page
-    show_sidebar: false
+  internships:
+    output: true
+    layout: internships-list
+  news:
+    output: true
+    layout: news
+    permalink: /news/:year/:month/:day/:title/
   people:
     output: true
     layout: page
-    show_sidebar: false
+  projects:
+    output: true
+    layout: project
+  teaching:
+    output: true
+    layout: page
+  tools:
+    output: true
+    layout: tool
   topics:
     output: true
     layout: topic
-    show_sidebar: false
 
 defaults:
   - scope:
       path: ""
+      type: pages
     values:
-      image: /assets/images/logos/CS.png
+      show_sidebar: false
+
+  - scope:
+      type: collaborations
+    values:
+      layout: collaboration
+
+  - scope:
+      type: complementary
+    values:
+      layout: complementary
+
+  - scope:
+      type: events
+    values:
+      layout: page
+
+  - scope:
+      type: news
+    values:
+      layout: news
+
+  - scope:
+      path: "_news/*-paper*-accepted-*"
+    values:
+      layout: news-accepted-paper
+      tags: [papers]
+
+  - scope:
+      path: "_news/*seminar*"
+    values:
+      layout: news-seminar
+      tags: [seminars]
+      
+  - scope:
+      path: "_news/*award*"
+    values:
+      tags: [awards]
 
   - scope:
       path: "_people/*-*"
     values:
       layout: person
 
-exclude: ["*/template*.md", "*/_template*.md", "README*.md", "vendor"]
+  - scope:
+      path: "_people/archive/*-*"
+    values:
+      layout: person
+
+  - scope:
+      type: projects
+    values:
+      layout: project
+
+  - scope:
+      type: tools
+    values:
+      layout: tool
+
+  - scope:
+      type: topics
+    values:
+      layout: topic
+
+exclude: [
+  "Gemfile",
+  "clean-theme.gemspec",
+  "Gemfile.lock",
+  "node_modules",
+  "vendor/bundle/",
+  "vendor/cache/",
+  "vendor/gems/",
+  "vendor/ruby/",
+  "*/template*.md",
+  "*/_template*.md",
+  "README*.md"
+]
