--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -9,9 +9,9 @@ name: Deploy Jekyll site to Pages
 on:
   # Runs on pushes targeting the default branch
   push:
-    branches: ["feature/join-data-files"]
+    branches: ["main"]
   pull_request:
-    branches: ["feature/join-data-files"]
+    branches: ["main"]
 
   # Allows you to run this workflow manually from the Actions tab
   workflow_dispatch:
@@ -41,16 +41,16 @@ jobs:
           ruby-version: '3.1.3' # Not needed with a .ruby-version file
           bundler-cache: true # runs 'bundle install' and caches installed gems automatically
           cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Merge YAML lists from _data/single/*/*.yml into _data/*.yml
+      - name: Merge YAML lists from _data/*/*.yml into _data/*.yml
         run: |
           mkdir -p _data
-          for dir in _data/single/*/ ; do
+          for dir in _data/*/ ; do
             foldername=$(basename "$dir")
             if [ "$foldername" = "members" ]; then
               output="_data/members_units.yml"
               echo "FILE ${output}"
-              echo "Auto-merged from _data/single/${foldername}/*.yml"
-              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
+              echo "Auto-merged from _data/${foldername}/*.yml"
+              echo "# Auto-merged from _data/${foldername}/*.yml" > "$output"
 
               echo "units:" > "$output"
               
@@ -71,8 +71,8 @@ jobs:
             else
               output="_data/${foldername}.yml"
               echo "FILE ${output}"
-              echo "Auto-merged from _data/single/${foldername}/*.yml"
-              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
+              echo "Auto-merged from _data/${foldername}/*.yml"
+              echo "# Auto-merged from _data/${foldername}/*.yml" > "$output"
 
               for file in "$dir"*.yml; do
                 filename=$(basename "$file")
@@ -88,12 +88,10 @@ jobs:
         id: pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
 
   # Deployment job
