--- a/_config.yml
+++ b/_config.yml
@@ -1,10 +1,8 @@
 # Site Settings
 title: Center for Cybersecurity
 tagline: Research Center in Fondazione Bruno Kessler (FBK)
-#remote_theme: chrisrhymes/bulma-clean-theme@v0.14.0
-remote_theme: marcopernpruner/template-test
+remote_theme: csfbk/fbk-cs-websites-theme
 repository: csfbk/csfbk.github.io
-baseurl: ""
 
 # Entity Settings
 entity_type: "center"
@@ -18,18 +16,19 @@ content-manager:
   name: Silvio Ranise
   affiliation: Center for Cybersecurity
   email: ranise@fbk.eu
-  phone: 03900223920809
+  phone: +390461314192
 
 social:
-  github: https://www.facebook.com/
-  youtube: https://www.facebook.com/
+  github: https://github.com/csfbk/
+  youtube: https://www.youtube.com/@cs-fbk
 
 # Other Settings and Defaults
 livereload: true
-#google_analytics: UA-code-here
+primary-color: "#0b7408"
 
 ## DO NOT MODIFY
 lang: en
+baseurl: ""
 permalink: pretty
 markdown: kramdown
 highlighter: rouge
