--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,19 +38,19 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1.3' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
-      - name: Merge YAML lists from _data/*/*.yml into _data/*.yml
+          ruby-version: '3.1.3'
+          bundler-cache: true
+          cache-version: 0
+      - name: Merge YAML lists from _data/single/*/*.yml into _data/*.yml
         run: |
           mkdir -p _data
-          for dir in _data/*/ ; do
+          for dir in _data/single/*/ ; do
             foldername=$(basename "$dir")
             if [ "$foldername" = "members" ]; then
               output="_data/members_units.yml"
               echo "FILE ${output}"
-              echo "Auto-merged from _data/${foldername}/*.yml"
-              echo "# Auto-merged from _data/${foldername}/*.yml" > "$output"
+              echo "Auto-merged from _data/single/${foldername}/*.yml"
+              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
 
               echo "units:" > "$output"
               
@@ -71,8 +71,8 @@ jobs:
             else
               output="_data/${foldername}.yml"
               echo "FILE ${output}"
-              echo "Auto-merged from _data/${foldername}/*.yml"
-              echo "# Auto-merged from _data/${foldername}/*.yml" > "$output"
+              echo "Auto-merged from _data/single/${foldername}/*.yml"
+              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
 
               for file in "$dir"*.yml; do
                 filename=$(basename "$file")
