Update primary color

--- a/_config.yml
+++ b/_config.yml
@@ -24,7 +24,7 @@ social:
 
 # Other Settings and Defaults
 livereload: true
-primary-color: "#0b7408"
+primary-color: "#083e74"
 
 ## DO NOT MODIFY
 lang: en
