--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -44,7 +44,6 @@ jobs:
       - name: Merge YAML lists from _data/single/*/*.yml into _data/*.yml
         run: |
           mkdir -p _data
-          count=0
           for dir in _data/single/*/ ; do
             foldername=$(basename "$dir")
             shopt -s nullglob
@@ -53,7 +52,7 @@ jobs:
               echo "No YAML files found in $dir, skipping."
               continue
             fi
-
+            
             if [ "$foldername" = "members" ]; then
               output="_data/members_units.yml"
               echo "FILE ${output}"
@@ -63,24 +62,17 @@ jobs:
               echo "units:" > "$output"
               
               for file in "$dir"*.yml; do
-                if [ ! -f "$file" ]; then
-                  echo "WARNING: $file is not a valid file, skipping."
-                  continue
-                fi
-
                 filename=$(basename "$file")
                 echo "" >> "$output"
-                echo "From file: $filename"
+                echo "From file: $filename"  
                 echo "## From file: $filename" >> "$output"
                 echo "  -" >> "$output"
-
-                if ! sed 's/^/    /' "$file" >> "$output"; then
-                  echo "ERROR: Failed to process file $file"
-                  exit 1
-                fi
-
+                
+                # Indent each line by 2 spaces and append to output
+                sed 's/^/    /' "$file"
+                sed 's/^/    /' "$file" >> "$output"
+                
                 echo "" >> "$output"
-                ((count++))
               done
 
             else
