--- a/.github/workflows/jekyll.yml
+++ b/.github/workflows/jekyll.yml
@@ -38,19 +38,66 @@ jobs:
       - name: Setup Ruby
         uses: ruby/setup-ruby@v1
         with:
-          ruby-version: '3.1.3' # Not needed with a .ruby-version file
-          bundler-cache: true # runs 'bundle install' and caches installed gems automatically
-          cache-version: 0 # Increment this number if you need to re-download cached gems
+          ruby-version: '3.1.3'
+          bundler-cache: true
+          cache-version: 0
+      - name: Merge YAML lists from _data/single/*/*.yml into _data/*.yml
+        run: |
+          mkdir -p _data
+          for dir in _data/single/*/ ; do
+            foldername=$(basename "$dir")
+            shopt -s nullglob
+            files=("$dir"*.yml)
+            if [ "${#files[@]}" -eq 0 ]; then
+              echo "No YAML files found in $dir, skipping."
+              continue
+            fi
+            
+            if [ "$foldername" = "members" ]; then
+              output="_data/members_units.yml"
+              echo "FILE ${output}"
+              echo "Auto-merged from _data/single/${foldername}/*.yml"
+              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
+
+              echo "units:" > "$output"
+              
+              for file in "$dir"*.yml; do
+                filename=$(basename "$file")
+                echo "" >> "$output"
+                echo "From file: $filename"  
+                echo "## From file: $filename" >> "$output"
+                echo "  -" >> "$output"
+                
+                # Indent each line by 2 spaces and append to output
+                sed 's/^/    /' "$file" >> "$output"
+                
+                echo "" >> "$output"
+              done
+
+            else
+              output="_data/${foldername}.yml"
+              echo "FILE ${output}"
+              echo "Auto-merged from _data/single/${foldername}/*.yml"
+              echo "# Auto-merged from _data/single/${foldername}/*.yml" > "$output"
+
+              for file in "$dir"*.yml; do
+                filename=$(basename "$file")
+                echo "" >> "$output"
+                echo "From file: $filename"
+                echo "## From file: $filename" >> "$output"
+                cat "$file" >> "$output"
+              done
+              echo "" >> "$output"
+            fi
+          done
       - name: Setup Pages
         id: pages
         uses: actions/configure-pages@v3
       - name: Build with Jekyll
-        # Outputs to the './_site' directory by default
         run: bundle exec jekyll build --baseurl "${{ steps.pages.outputs.base_path }}"
         env:
           JEKYLL_ENV: production
       - name: Upload artifact
-        # Automatically uploads an artifact from the './_site' directory by default
         uses: actions/upload-pages-artifact@v3
 
   # Deployment job
